--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <section class="flex justify-around px-10">
+    <section class=" justify-around px-10  ">
         <div class="flex items-center mt-20">
             <div class="card w-96 mx-auto items-center bg-purple-200 text-neutral-content">
                 <div class="card-body items-center text-center text-black">
